--- a/Backend/configs/syntax_config.json
+++ b/Backend/configs/syntax_config.json
@@ -1,21 +1,25 @@
-{
-    "THROW_TYPES":[{
-            "L_PAREN":"(",
-            "R_PAREN":")",
-            "TYPE":"sync",
-            "PRCEDENCE":1
-        },
-        {
-            "L_PAREN":"[",
-            "R_PAREN":"]",
-            "TYPE":"multyplex",
-            "PRCEDENCE":0
-        },
-        {
-            "L_PAREN":"<",
-            "R_PAREN":">",
-            "TYPE":"passing",
-            "PRCEDENCE":2
-        }
-    ]
+{  
+   "THROW_TYPES":[  
+      {  
+         "L_PAREN":"\\(",
+         "R_PAREN":"\\)",
+         "SEP":",",
+         "TYPE":"sync",
+         "PRCEDENCE":1
+      },
+      {  
+         "L_PAREN":"\\[",
+         "R_PAREN":"\\]",
+         "SEP":"",
+         "TYPE":"multyplex",
+         "PRCEDENCE":0
+      },
+      {  
+         "L_PAREN":"\\<",
+         "R_PAREN":"\\>",
+         "SEP":"|",
+         "TYPE":"passing",
+         "PRCEDENCE":2
+      }
+   ]
 }
