--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,8 @@
   "author": "Shahar",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.3.1",
+    "axios": "^0.19.0",
     "copy-webpack-plugin": "^5.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
