--- a/Client/.babelrc
+++ b/Client/.babelrc
@@ -4,6 +4,8 @@
     "@babel/react"
   ],
   "plugins": [
-    "@babel/plugin-syntax-jsx"
+    "@babel/plugin-syntax-jsx",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime"
   ]
 }
