--- a/Client/.vscode/launch.json
+++ b/Client/.vscode/launch.json
@@ -4,13 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
-            "type": "node",
+            "type": "chrome",
             "request": "launch",
-            "name": "webpack-dev-server",
-            "program": "${workspaceRoot}/node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-            "cwd": "${workspaceFolder}"
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:8080",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
