--- a/Client/package.json
+++ b/Client/package.json
@@ -4,12 +4,13 @@
   "description": "client side for juggling calculations website",
   "main": "src/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --open",
+    "dev": "webpack-dev-server --mode development -d",
     "build": "webpack"
   },
   "author": "Shahar",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@material-ui/core": "^4.3.1",
     "axios": "^0.19.0",
     "copy-webpack-plugin": "^5.0.3",
@@ -22,6 +23,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
