--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@material-ui/core": "^4.3.1",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "copy-webpack-plugin": "^5.0.3",
     "react": "^16.8.6",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-syntax-jsx": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
