Developed test for JugglingFixer

--- a/Backend/configs/routes_config.json
+++ b/Backend/configs/routes_config.json
@@ -1,4 +1,5 @@
 {
   "analyzer": "/analyzer",
-  "suggest_valid_pattern": "/suggest_valid_pattern"
+  "suggest_valid_pattern": "/suggest_valid_pattern",
+  "transactions": "/transactions"
 }
