--- a/Client/package.json
+++ b/Client/package.json
@@ -16,7 +16,9 @@
     "axios": "^0.19.0",
     "copy-webpack-plugin": "^5.0.3",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
